--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-scripts": "3.2.0",
-    "web3": "1.2.2"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.3",
+    "web3": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
