--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/lab": "^5.0.0-alpha.44",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
+    "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
+    "ipfs-core": "^0.11.1",
+    "randomstring": "^1.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.3",
     "web3": "^1.6.0"
   },
   "scripts": {
